--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>It-Tech </title>
+    <title>Syscorp </title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="keywords" content="">
