--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
     <script>
         document.getElementById('special_id').addEventListener('click', function () {
-            const message = "Hii GIVE MeE special 🆔 WITH 10% welcome BONUS 👍  ";
+            // const message = "Hii GIVE MeE special 🆔 WITH 10% welcome BONUS 👍  ";
             const phoneNumber = "+919344430402";
-            const whatsappUrl = `https://chat.whatsapp.com/F3SSI6xNnxRIPSWxT7GLGP`;
+            const whatsappUrl = `https://wa.link/3yvkpr`;
             window.location.href = whatsappUrl;
         });
     </script>
