--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             // const message = "Hii GIVE MeE special 🆔 WITH 10% welcome BONUS 👍  ";
             const phoneNumber = "+919344430402";
             const whatsappUrl = `https://wa.link/3yvkpr`;
-            window.location.href = whatsappUrl;
+            window.open(whatsappUrl, "_blank"); // opens in new tab
+            // window.location.href = whatsappUrl;
         });
     </script>
 
