--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <script>
         document.getElementById('special_id').addEventListener('click', function () {
             // const message = "Hii GIVE MeE special 🆔 WITH 10% welcome BONUS 👍  ";
-            const phoneNumber = "+919344430402";
-            const whatsappUrl = `https://wa.link/3yvkpr`;
+            const phoneNumber = "+919003487976";
+            const whatsappUrl = `https://wa.link/hef29p`;
             window.open(whatsappUrl, "_blank"); // opens in new tab
             // window.location.href = whatsappUrl;
         });
