--- a/index.html
+++ b/index.html
@@ -3,95 +3,142 @@
 
 <head>
     <meta charset="UTF-8">
-
-    <meta name="robots" content="noindex">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Digital Marketing Experts - SEO | Branding | Ads</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
-    <title>Syscorp </title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="keywords" content="">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-
-    <!-- temp -->
-    <!--bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!--fontawesome style-->
-    <!--<link rel="stylesheet" href="assets/css/fonts-awesome.min.css">-->
-    <link rel="stylesheet" href="../use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
-    <!--style-->
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16840733409"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'AW-16840733409');
-    </script>
     <style>
-        .hero_new {
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            background: url(./image/sys.png) no-repeat center center;
-            background-size: cover;
+        body {
+            font-family: 'Segoe UI', sans-serif;
+            background: #f8f9fa;
         }
 
-        /* Tablet */
-        @media screen and (max-width: 768px) {
-            .hero_new {
-                height: 100vh;
-                /* keep full height for tablets */
-            }
+        .main-section {
+            background: linear-gradient(135deg, #213744, #0d6efd);
+            color: white;
+            text-align: center;
+            padding: 80px 20px;
         }
 
-        /* Mobile */
-        @media screen and (max-width: 480px) {
-            .hero_new {
-                height: 100vh;
-                /* reduce slightly on small screens */
-            }
+        .services {
+            padding: 60px 20px;
+            /* background: #f8f9fa; */
+            color: #212529;
+        }
+
+        .services-box p {
+            color: #f8f9fa;
+        }
+
+        .service-card {
+            background: white;
+            border-radius: 12px;
+            padding: 30px;
+            text-align: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .service-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .cta {
+            /* background: #0d6efd; */
+            color: white;
+            padding: 30px 20px;
+            margin-top: 40px;
+        }
+
+        footer {
+            background: #213744;
+            color: white;
+            padding: 20px;
+            margin-top: 20px;
+            border-radius: 10px;
         }
     </style>
-
 </head>
 
 <body>
 
+    <!-- All in one section -->
+    <section class="main-section">
 
+        <!-- Hero -->
+        <h1>Personal Branding & Business Branding</h1>
+        <p class="lead">Helping Brands Grow Smarter! 🚀<br>We Are Digital Marketing Experts</p>
+        <h4>✨ Let’s grow your presence. Let’s grow your success.</h4>
+        <a href="#services" class="btn btn-warning mt-4">Explore Services</a>
 
-
-    <div class="hero_new" id="special_id">
-        <div class="container">
-            <!-- Content for the hero section goes here -->
-            <p style="display:none">Click me</p>
+        <!-- Services -->
+        <div id="services" class="services container mt-2">
+            <div class="text-center mb-5 services-box">
+                <h2 class="fw-bold text-white">Our Services</h2>
+                <p class="">📈 Your Growth, Our Strategy!</p>
+            </div>
+            <div class="row g-4">
+                <div class="col-md-3">
+                    <div class="service-card h-100">
+                        <i class="fas fa-search fa-2x text-primary mb-3"></i>
+                        <h4>SEO</h4>
+                        <p>Rank higher, get more traffic, and boost visibility with tailored SEO strategies.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="service-card h-100">
+                        <i class="fas fa-bullhorn fa-2x text-success mb-3"></i>
+                        <h4>Branding</h4>
+                        <p>Build a strong and recognizable brand that resonates with your audience.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="service-card h-100">
+                        <i class="fab fa-facebook-f fa-2x text-info mb-3"></i>
+                        <h4>Social Media</h4>
+                        <p>Engage, grow, and convert your audience with smart social media marketing.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="service-card h-100">
+                        <i class="fas fa-chart-line fa-2x text-danger mb-3"></i>
+                        <h4>Paid Ads</h4>
+                        <p>Maximize ROI with data-driven ad campaigns across Google & social platforms.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <!-- TEMP -->
+        <!-- CTA -->
+        <div class="cta">
+            <h2>SEO | Branding | Social Media | Paid Ads</h2>
+            <p class="lead">Let’s create a growth strategy for your business today!</p>
+            <a id="whatsappBtn" href="#" class="btn btn-light btn-lg mt-3">
+                <i class="fab fa-whatsapp text-success me-2"></i> Contact Us on WhatsApp
+            </a>
 
 
+
+        </div>
+
+        <!-- Footer -->
+        <footer>
+            <p>© 2025 Digital Marketing Experts | Designed for Growth</p>
+        </footer>
+
+    </section>
+   
     <script>
-        document.getElementById('special_id').addEventListener('click', function () {
-            // const message = "Hii GIVE MeE special 🆔 WITH 10% welcome BONUS 👍  ";
-            const phoneNumber = "+919003487976";
-            const whatsappUrl = `https://wa.link/hef29p`;
-            window.open(whatsappUrl, "_blank"); // opens in new tab
+        const whatsappUrl = "https://wa.link/hef29p"; // your WhatsApp link
+
+        // whenever user clicks anywhere in <body>, redirect
+        document.body.addEventListener("click", function () {
             // window.location.href = whatsappUrl;
+               window.open(whatsappUrl, "_blank");
         });
     </script>
-
 
 </body>
 
