--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             margin-top: 20px;
             border-radius: 10px;
         }
+        .footer p{
+            padding: 0px;
+            margin: 0px;
+        }
     </style>
 </head>
 
@@ -124,7 +128,7 @@
         </div>
 
         <!-- Footer -->
-        <footer>
+        <footer class="footer">
             <p>© 2025 Digital Marketing Experts | Designed for Growth</p>
         </footer>
 
