--- a/index.html
+++ b/index.html
@@ -6,77 +6,164 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Marketing Experts - SEO | Branding | Ads</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
     <style>
+        html,
         body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
             font-family: 'Segoe UI', sans-serif;
-            background: #f8f9fa;
+            overflow: hidden;
+            /* Prevent scrolling */
         }
 
         .main-section {
+            display: flex;
+            flex-direction: column;
+            /* justify-content: space-between; */
+            justify-content: space-evenly;
+            align-items: center;
             background: linear-gradient(135deg, #213744, #0d6efd);
             color: white;
             text-align: center;
-            padding: 80px 20px;
+            height: 100vh;
+            /* Full viewport height */
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        h1,
+        h2,
+        h4,
+        p {
+            margin: 5px 0;
         }
 
         .services {
-            padding: 60px 20px;
-            /* background: #f8f9fa; */
-            color: #212529;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
         }
 
-        .services-box p {
-            color: #f8f9fa;
+        .circle-icon {
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.05));
+            border-radius: 50%;
+            width: 80px;
+            height: 80px;
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            transition: transform 0.4s, box-shadow 0.4s, background 0.4s;
+            cursor: pointer;
         }
 
-        .service-card {
-            background: white;
-            border-radius: 12px;
-            padding: 30px;
+        /* Icon inside circle */
+        .circle-icon i {
+            font-size: 1.2rem;
+            margin-bottom: 5px;
+            transition: transform 0.4s;
+        }
+
+        /* Text inside circle */
+        .circle-icon h6 {
+            font-size: 11px;
             text-align: center;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
+            margin: 0;
         }
 
-        .service-card:hover {
+        /* Hover effect */
+        .circle-icon:hover {
+            /* transform: scale(1.1); */
             transform: translateY(-10px);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.05));
         }
+
+
+
+        /* Small devices (sm) */
+        @media (min-width: 576px) {
+            .circle-icon {
+                width: 90px;
+                height: 90px;
+                padding: 18px;
+            }
+
+            .circle-icon i {
+                font-size: 1.3rem;
+            }
+
+            .circle-icon h6 {
+                font-size: 12px;
+            }
+
+
+        }
+
+        /* Medium devices (md) */
+        @media (min-width: 768px) {
+            .circle-icon {
+                width: 100px;
+                height: 100px;
+                padding: 20px;
+            }
+
+            .circle-icon i {
+                font-size: 1.5rem;
+            }
+
+            .circle-icon h6 {
+                font-size: 13px;
+            }
+
+        }
+
+        /* Large devices (lg) */
+        @media (min-width: 992px) {
+            .circle-icon {
+                width: 120px;
+                height: 120px;
+                padding: 25px;
+            }
+
+            .circle-icon i {
+                font-size: 1.7rem;
+            }
+
+            .circle-icon h6 {
+                font-size: 14px;
+            }
+        }
+
 
         .cta {
-            /* background: #0d6efd; */
-            color: white;
-            padding: 30px 20px;
-            margin-top: 40px;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 15px 20px;
+            border-radius: 12px;
         }
 
-        /* splash / pulse animation */
-        .fab.fa-whatsapp {
-            font-size: 24px;
-            color: #25D366;
-            position: relative;
-            animation: pulse 1.5s infinite;
-        }
-
-
-        /* parent / button setup */
         #whatsappBtn {
-            position: relative;
-            display: inline-block;
-            border-radius: 0.5rem;
-            z-index: 1;
-            overflow: visible;
-            background: #fff;
-            /* keeps button visible */
+            display: inline-flex;
+            align-items: center;
+            font-weight: bold;
+            background: #25D366;
+            color: white;
+            border: 1px solid #25D366;
+            transition: 0.3s ease-in-out;
         }
 
-      
+        #whatsappBtn:hover {
+            transform: translateY(-5px);
+        }
 
-        /* icon pulse inside the button */
         #whatsappBtn .fab.fa-whatsapp {
             font-size: 24px;
+            margin-right: 8px;
             animation: iconPulse 1.4s infinite ease-in-out;
         }
 
@@ -86,7 +173,7 @@
             }
 
             50% {
-                transform: scale(1.18);
+                transform: scale(1.2);
             }
 
             100% {
@@ -94,104 +181,67 @@
             }
         }
 
-
         footer {
-            background: #213744;
-            color: white;
-            padding: 20px;
-            margin-top: 20px;
-            border-radius: 10px;
-        }
-
-        .footer p {
-            padding: 0px;
-            margin: 0px;
+            font-size: 0.9rem;
         }
     </style>
 </head>
 
 <body>
-
-    <!-- All in one section -->
     <section class="main-section">
 
         <!-- Hero -->
-        <h1>Personal Branding & Business Branding</h1>
-        <p class="lead">Helping Brands Grow Smarter! 🚀<br>We Are Digital Marketing Experts</p>
-        <h4>✨ Let’s grow your presence. Let’s grow your success.</h4>
-        <a href="#services" class="btn btn-warning mt-4">Explore Services</a>
+        <div>
+            <h1>Personal Branding & Business Branding</h1>
+            <p class="lead">Helping Brands Grow Smarter! 🚀<br>We Are Digital Marketing Experts</p>
+            <h4>✨ Let’s grow your presence. Let’s grow your success.</h4>
+        </div>
 
         <!-- Services -->
-        <div id="services" class="services container mt-2">
-            <div class="text-center mb-5 services-box">
-                <h2 class="fw-bold text-white">Our Services</h2>
-                <p class="">📈 Your Growth, Our Strategy!</p>
+        <div class="services">
+            <div class="circle-icon">
+                <i class="fas fa-search"></i>
+                <h6 class="mt-2">SEO</h6>
             </div>
-            <div class="row g-4">
-                <div class="col-md-3">
-                    <div class="service-card h-100">
-                        <i class="fas fa-search fa-2x text-primary mb-3"></i>
-                        <h4>SEO</h4>
-                        <p>Rank higher, get more traffic, and boost visibility with tailored SEO strategies.</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="service-card h-100">
-                        <i class="fas fa-bullhorn fa-2x text-success mb-3"></i>
-                        <h4>Branding</h4>
-                        <p>Build a strong and recognizable brand that resonates with your audience.</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="service-card h-100">
-                        <i class="fab fa-facebook-f fa-2x text-info mb-3"></i>
-                        <h4>Social Media</h4>
-                        <p>Engage, grow, and convert your audience with smart social media marketing.</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="service-card h-100">
-                        <i class="fas fa-chart-line fa-2x text-danger mb-3"></i>
-                        <h4>Paid Ads</h4>
-                        <p>Maximize ROI with data-driven ad campaigns across Google & social platforms.</p>
-                    </div>
-                </div>
+            <div class="circle-icon">
+                <i class="fas fa-bullhorn"></i>
+                <h6 class="mt-2">Branding</h6>
+            </div>
+            <div class="circle-icon">
+                <i class="fab fa-facebook-f "></i>
+                <h6 class="mt-2">Social Media</h6>
+            </div>
+            <div class="circle-icon">
+                <i class="fas fa-chart-line"></i>
+                <h6 class="mt-2">Paid Ads</h6>
             </div>
         </div>
 
         <!-- CTA -->
-        <!-- <div class="cta">
-            <h2>SEO | Branding | Social Media | Paid Ads</h2>
-            <p class="lead">Let’s create a growth strategy for your business today!</p>
-            <a id="whatsappBtn" href="#" class="btn btn-light btn-lg mt-3">
-                <i class="fab fa-whatsapp text-success me-2"></i> Contact Us on WhatsApp
-            </a>
-        </div> -->
         <div class="cta">
-            <h2>SEO | Branding | Social Media | Paid Ads</h2>
+            <!-- <h2>SEO | Branding | Social Media | Paid Ads</h2> -->
             <p class="lead">Let’s create a growth strategy for your business today!</p>
-            <a id="whatsappBtn" href="#" class="btn btn-light btn-lg mt-3">
-                <i class="fab fa-whatsapp text-success me-2"></i>
+            <a id="whatsappBtn" href="#" class="btn btn-light btn-lg mt-2">
+                <i class="fab fa-whatsapp"></i>
                 Contact Us on WhatsApp
             </a>
         </div>
 
         <!-- Footer -->
-        <footer class="footer">
+        <footer>
             <p>© 2025 Digital Marketing Experts | Designed for Growth</p>
         </footer>
 
     </section>
 
     <script>
-        const whatsappUrl = "https://wa.link/hef29p"; // your WhatsApp link
+        const whatsappUrl = "https://wa.link/hef29p";
 
-        // whenever user clicks anywhere in <body>, redirect
         document.body.addEventListener("click", function () {
-            // window.location.href = whatsappUrl;
             window.open(whatsappUrl, "_blank");
         });
     </script>
+
 
 </body>
 
