--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
         .main-section {
             position: relative;
-            background-image: url(/image/bg.jpg);
+            /* background-image: url(/image/bg.jpg); */
+            background-image: -webkit-linear-gradient(0, #4dabff 0, #62ddff 100%);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
