--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             position: absolute;
             inset: 0;
             /* background: rgba(0, 0, 0, 0.65); */
-            background: rgba(0, 0, 0, 0.329);
+            /* background: rgba(0, 0, 0, 0.329); */
             z-index: 0;
         }
 
@@ -60,7 +60,8 @@
         }
 
         .main-heading {
-            color: #FDD835;
+            /* color: #FDD835; */
+            color: #000;
             font-size: 42px;
         }
 
@@ -84,13 +85,15 @@
         .services li {
             font-size: 1rem;
             cursor: pointer;
-            color: #FDD835;
+            /* color: #FDD835; */
+            color: #000;
             font-weight: 600;
 
         }
 
         .cta {
-            background: rgba(255, 255, 255, 0.1);
+            /* background: rgba(255, 255, 255, 0.1); */
+            background: rgba(255, 255, 255, 0.3);
             padding: 15px 20px;
             border-radius: 12px;
         }
@@ -129,6 +132,11 @@
             width: 60%;
             max-width: 500px;
             height: auto;
+        }
+
+        p.lead.footer-para {
+            color: black;
+            font-weight: 600;
         }
 
         /* ✅ Adjust layout for tablets and smaller devices */
@@ -195,7 +203,7 @@
         </div>
 
         <div class="cta">
-            <p class="lead">Let’s create a growth strategy for your business today!</p>
+            <p class="lead footer-para">Let’s create a growth strategy for your business today!</p>
             <a id="whatsappBtn" href="#" class="btn btn-light btn-lg mt-2">
                 <i class="fab fa-whatsapp"></i>
                 WhatsApp Now
