--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         .main-heading {
             /* color: #FDD835; */
-            color: #000;
+            color: white;
             font-size: 42px;
         }
 
