--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             font-size: 1rem;
             cursor: pointer;
             /* color: #FDD835; */
-            color: #000;
+            color: #16194a;
             font-weight: 600;
 
         }
@@ -135,7 +135,7 @@
         }
 
         p.lead.footer-para {
-            color: black;
+            color:#16194a;
             font-weight: 600;
         }
 
